Fix layout fluctuation when using plot preview in a wizard-type plugin.

BUG: 425885